[package]
name = "dungeon-crawler"
version = "0.4.0"
authors = ["Jaak Randmets <jaak.ra@gmail.com>"]
edition = "2018"

[dependencies.curl]
version = "0.4"
features = ["http2"]

[dependencies]
static_assertions = "1.0.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
env_logger = "0.7"
lazy_static = "1.4"
regex = "1.3"
csv = "1.1"
dotenv = "0.14"
chrono = "0.4"
crossbeam = "0.7"
crossbeam-channel = "0.3"
structopt = "0.3"
tempfile = "3.1"
cuckoofilter = "0.3"
fs2 = "0.4"