[package]
name = "dungeon-crawler"
version = "0.5.0"
authors = ["Jaak Randmets <jaak.ra@gmail.com>"]
edition = "2018"

[dependencies.curl]
version = "0.4"

[dependencies]
static_assertions = "1.1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
env_logger = "0.7"
lazy_static = "1.4"
regex = "1.3"
csv = "1.1"
dotenv = "0.15"
chrono = "0.4"
crossbeam = "0.7"
crossbeam-channel = "0.4"
structopt = "0.3"
tempfile = "3.1"
cuckoofilter = "0.3"
fs2 = "0.4"
hyper = "0.13"
hyper-tls = "0.4"
governor = "0.2"
nonzero_ext = "0.2"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "0.2", features = ["sync", "rt-threaded", "macros", "net", "rt-util"] }