[package]
name = "dungeon-crawler"
version = "0.6.0"
authors = ["Jaak Randmets <jaak.ra@gmail.com>"]
edition = "2021"

[dependencies.curl]
version = "0.4"

[dependencies]
static_assertions = "1.1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
env_logger = "0.9"
lazy_static = "1.4"
regex = "1.5"
csv = "1.1"
dotenv = "0.15"
chrono = "0.4"
crossbeam = "0.8"
crossbeam-channel = "0.5"
structopt = "0.3"
tempfile = "3.2"
cuckoofilter = "0.5"
fs2 = "0.4"
hyper = { version = "0.14", features = ["client", "http1", "http2", "runtime"] }
hyper-tls = "0.5"
governor = "0.3"
nonzero_ext = "0.3"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.14", features = ["sync", "rt", "rt-multi-thread", "macros", "net"] }
tower = { version = "0.4", features = ["full"] }
tower-service = "0.3"